# scho1ar-backend

./: .claudeignore  .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.claude/: api-standards.md  coding-guidelines.md  filemap.md  lessons-learned.md  security-guidelines.md  techstack.md
.claude/commands/: add-dependency.md  add-lesson.md  new-route.md  update-docs.md  update-tutorial.md
migrations/: 20260120164608_init.sql
src/: config.rs  db.rs  error.rs  lib.rs  main.rs  validation.rs
src/auth/: claims.rs  jwks.rs  middleware.rs  mod.rs
src/routes/: health.rs  mod.rs
