[package]
name = "scho1ar-backend"
version = "0.1.0"
edition = "2021"
description = "Scho1ar Backend - Cloud Cost Management API"
authors = ["Scho1ar Team"]

[dependencies]
# Web framework
axum = "0.7"
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "json", "migrate"] }

# Environment and config
dotenvy = "0.15"

# Authentication
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
once_cell = "1.19"
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
